test/Fail/Issue4881c.err
Issue4881c.agda:1,1-3,16: error: [Syntax.DuplicateAnonDeclaration]
Duplicate declaration of _
